syntax = "proto3";
package remes.remes.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "remes/x/remes/types";

// ExecutionEnvironment defines the software and hardware requirements for deterministic execution
message ExecutionEnvironment {
  option (amino.name) = "remes/x/remes/ExecutionEnvironment";
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // environment_id is a unique identifier for this environment
  string environment_id = 1;

  // platform is the target platform (nvidia, amd, intel)
  string platform = 2;

  // cuda_version is the CUDA version (for NVIDIA platform)
  string cuda_version = 3; // e.g., "12.1.0"

  // pytorch_version is the PyTorch version
  string pytorch_version = 4; // e.g., "2.1.0"

  // python_version is the Python version
  string python_version = 5; // e.g., "3.10"

  // rocm_version is the ROCm version (for AMD platform)
  string rocm_version = 6; // e.g., "5.4.0"

  // intel_xpu_version is the Intel XPU version (for Intel platform)
  string intel_xpu_version = 7; // e.g., "2024.1.0"

  // cudnn_version is the cuDNN version (for NVIDIA platform)
  string cudnn_version = 8; // e.g., "8.9.0"

  // deterministic_algorithms_enabled indicates if deterministic algorithms are enabled
  bool deterministic_algorithms_enabled = 9;

  // cublas_workspace_config is the CUBLAS workspace configuration
  string cublas_workspace_config = 10; // e.g., ":4096:8"

  // floating_point_mode is the floating point mode (fp32, fp16, bf16)
  string floating_point_mode = 11; // e.g., "fp32"

  // approved_at_height is the block height when this environment was approved
  int64 approved_at_height = 12;

  // approved_by is the address that approved this environment
  string approved_by = 13;

  // is_active indicates if this environment is currently active
  bool is_active = 14;

  // approved_at is the timestamp when this environment was approved
  google.protobuf.Timestamp approved_at = 15 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  // container_hash is the Docker/OCI image hash (sha256:abc123...)
  string container_hash = 16;

  // container_signature is the cryptographic signature of the container image
  // Signed by protocol authority to prevent tampering
  bytes container_signature = 17;

  // container_registry is the container registry URL (e.g., "docker.io", "ghcr.io")
  string container_registry = 18;
}

// ExecutionEnvironmentProposal represents a proposal for a new execution environment
message ExecutionEnvironmentProposal {
  option (amino.name) = "remes/x/remes/ExecutionEnvironmentProposal";
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // proposal_id is the unique identifier for this proposal
  uint64 proposal_id = 1;

  // proposer is the address of the proposer
  string proposer = 2;

  // environment is the proposed execution environment
  ExecutionEnvironment environment = 3 [(gogoproto.nullable) = false];

  // deposit is the deposit amount for the proposal
  string deposit = 4;

  // voting_period_end is when the voting period ends
  google.protobuf.Timestamp voting_period_end = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  // status is the current status of the proposal (voting, approved, rejected, activated)
  string status = 6;

  // submit_time is when the proposal was submitted
  google.protobuf.Timestamp submit_time = 7 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  // total_votes is the total voting power cast
  string total_votes = 8;

  // yes_votes is the total yes votes
  string yes_votes = 9;

  // no_votes is the total no votes
  string no_votes = 10;

  // abstain_votes is the total abstain votes
  string abstain_votes = 11;
}

