syntax = "proto3";
package remes.remes.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "remes/x/remes/types";

// NodeType represents the type of node
enum NodeType {
  option (gogoproto.goproto_enum_prefix) = false;
  
  // NODE_TYPE_UNSPECIFIED indicates an unspecified node type
  NODE_TYPE_UNSPECIFIED = 0;
  
  // NODE_TYPE_MINING indicates a mining node
  NODE_TYPE_MINING = 1;
  
  // NODE_TYPE_SERVING indicates a serving node
  NODE_TYPE_SERVING = 2;
  
  // NODE_TYPE_VALIDATOR indicates a validator node
  NODE_TYPE_VALIDATOR = 3;
  
  // NODE_TYPE_PROPOSER indicates a proposer node
  NODE_TYPE_PROPOSER = 4;
}

// NodeStatus represents the status of a node
enum NodeStatus {
  option (gogoproto.goproto_enum_prefix) = false;
  
  // NODE_STATUS_UNSPECIFIED indicates an unspecified status
  NODE_STATUS_UNSPECIFIED = 0;
  
  // NODE_STATUS_ACTIVE indicates an active node
  NODE_STATUS_ACTIVE = 1;
  
  // NODE_STATUS_INACTIVE indicates an inactive node
  NODE_STATUS_INACTIVE = 2;
  
  // NODE_STATUS_SLASHED indicates a slashed node
  NODE_STATUS_SLASHED = 3;
  
  // NODE_STATUS_SUSPENDED indicates a suspended node
  NODE_STATUS_SUSPENDED = 4;
}

// ResourceSpec represents the resource specification for a node
message ResourceSpec {
  // cpu_cores is the number of CPU cores
  uint32 cpu_cores = 1;
  
  // memory_gb is the memory in GB
  uint32 memory_gb = 2;
  
  // gpu_count is the number of GPUs
  uint32 gpu_count = 3;
  
  // gpu_memory_gb is the GPU memory in GB
  uint32 gpu_memory_gb = 4;
  
  // storage_gb is the storage in GB
  uint32 storage_gb = 5;
  
  // network_bandwidth_mbps is the network bandwidth in Mbps
  uint32 network_bandwidth_mbps = 6;
}

// ResourceQuota represents a resource quota for a specific role
message ResourceQuota {
  // role is the node role
  NodeType role = 1;
  
  // cpu_cores is the allocated CPU cores
  uint32 cpu_cores = 2;
  
  // memory_gb is the allocated memory in GB
  uint32 memory_gb = 3;
  
  // gpu_count is the allocated GPUs
  uint32 gpu_count = 4;
  
  // gpu_memory_gb is the allocated GPU memory in GB
  uint32 gpu_memory_gb = 5;
}

// NodeRegistration represents a registered node in the network
message NodeRegistration {
  // node_address is the address of the node
  string node_address = 1;
  
  // node_type is the primary node type
  NodeType node_type = 2;
  
  // resources is the total resource specification
  ResourceSpec resources = 3 [(gogoproto.nullable) = false];
  
  // stake is the staked amount
  string stake = 4;
  
  // status is the node status
  NodeStatus status = 5;
  
  // roles is the list of roles this node can perform (multi-role support)
  repeated NodeType roles = 6;
  
  // role_allocations maps roles to resource quotas
  repeated RoleAllocation role_allocations = 7;
  
  // registered_at_height is the block height when registered
  int64 registered_at_height = 8;
  
  // registered_at_time is the timestamp when registered
  google.protobuf.Timestamp registered_at_time = 9 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  
  // resource_proof_ipfs_hash is the IPFS hash of the resource allocation proof
  string resource_proof_ipfs_hash = 10;
  
  // last_heartbeat_height is the last block height when node sent heartbeat
  int64 last_heartbeat_height = 11;
  
  // slashing_events is the number of slashing events
  uint64 slashing_events = 12;
}

// RoleAllocation represents resource allocation for a specific role
message RoleAllocation {
  // role is the node role
  NodeType role = 1;
  
  // quota is the resource quota for this role
  ResourceQuota quota = 2 [(gogoproto.nullable) = false];
}

